feat: Add ability to export artifacts and configure tmp location
